--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "postinstall": "prisma generate",
-    "@radix-ui/react-aspect-ratio": "^1.1.0",
+    "vercel-build": "prisma generate && next build",
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
